# sg

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  justfile
python/: generate_test_data.py  index.html  main.py  pyproject.toml
src/: main.rs
