[package]
name = "sg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal", "accelerate"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal", "accelerate"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal", "accelerate"] }
hf-hub = "0.4.3"
rusqlite = "0.37.0"
safetensors = "0.6.2"
serde_json = "1.0.145"
tokenizers = "0.22.0"
twox-hash = "2.1.2"
walkdir = "2.5.0"
tokio = "1.47.1"
