[package]
name = "sg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal", "accelerate"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal", "accelerate"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal", "accelerate"] }
hf-hub = "0.4.3"
rusqlite = "0.37.0"
safetensors = "0.4.5"
serde_json = "1.0.145"
tokenizers = "0.22.0"
twox-hash = "2.1.2"
walkdir = "2.5.0"
jiff = "0.2.15"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-chrome = "0.7.2"
tracing = "0.1.41"
clap = { version = "4.5.47", features = ["derive"] }
tracing-timing = "0.7.0"
indicatif = "0.18.0"
