[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s[full]>=0.2.14",
    "h5py>=3.14.0",
    "ipython>=9.6.0",
    "litestar>=2.17.0",
    "pystemmer>=3.0.0",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
    "xxhash>=3.5.0",
]
